2008-01-14  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::do_initialize): Start with sys_path empty.
	(maybe_add_path_elts): Omit path_sep_str if path is empty.

	* symtab.h (symbol_table::do_pop_context): Remove symbol_records
	which have no more context.
	(symbol_table::symbol_record::pop_context,
	(symbol_table::symbol_record::symbol_record_rep::pop_context):
	Return size of value_stack, or 1 if variable is persistent or global.

2008-01-14  Kai Habel  <kai.habel@gmx.de>

	* graphics.h.in (class patch::properties): New properties:
	cdatamapping, facevertexalphadata, facevertexcdata, vertexnormals,
	normalmode, facelighting, edgealpha, edgelighting,
	backfacelighting, ambientstrength, diffusestrength,
	specularstrength, specularexponent, specularcolorreflectance,
	erasemode.

2008-01-14  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (gh_manager::do_make_graphics_handle,
	gh_manager::make_graphics_handle): New boolean parameter
	do_createfcn.
	* graphics.cc (xcreatefcn): New static function.
	(gh_manager::do_make_graphics_handle): New boolean parameter
	do_createfcn.  Execute createfcn callback accordingly.
	(make_graphics_object, F__go_figure__): Use do_createfcn
	parameter and call xcreatefcn

	* genprops.awk (emit_get_callback): Pass user data to execute method.
	* graphics.cc (execute_callback): New static function.
	(callback_property::validate): Make it work.
	(callback_property::execute): Make it work.
	(gh_manager::do_free): Execute delete function here.
	* graphics.h.in (callback_property::execute): Fix decl.
	(base_properties::buttondownfcn, base_properties::createfcn,
	base_properties::deletefcn, base_properties::userdata): Default
	value is empty Matrix, not undefined octave_value object.
	(base_properties::execute_createfcn): New function.
	(base_properties::execute_deletefcn): New function.

2007-12-13  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in, graphics.cc (class base_properties): New